Angular Quick-Start with bootstrap 3

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,4 +8,6 @@ services:
       - "4200:4200"
     volumes:
       - ./app:/app
-    command: ng serve --host 0.0.0.0
+    command: >
+      sh -c "npm install &&
+        ng serve --host 0.0.0.0"
